# shouzhang

./: .gitignore  README.md  pyproject.toml  run.py  server.py
assets/presets/: a4-portrait.json  a5-landscape.json  a5-portrait.json
assets/stickers/logo/: LICENSE.md
docs/: README.md  api.md  assets.md  fonts.md  rendering.md  richtext.md  templates.md
editor/: index.html  package-lock.json  package.json  tailwind.config.js
editor/src/: App.vue  style.css
editor/src/components/: BackgroundPanel.vue  Canvas.vue  CanvasElement.vue  ExportDialog.vue  LayerPanel.vue  Sidebar.vue  StickerPanel.vue  TextPanel.vue  Toolbar.vue
editor/src/engine/: text.js
editor/src/stores/: editor.js
examples/: demo.py
scripts/: download_fonts.py
src/shouzhang/: __init__.py
src/shouzhang/engine/: __init__.py  fonts.py  rich_text.py  text_layout.py
src/shouzhang/models/: __init__.py  document.py  element.py  style.py
src/shouzhang/render/: __init__.py  doc_compiler.py  protocol.py  rasterizer.py  svg_compiler.py
src/shouzhang/templates/: __init__.py  registry.py
src/shouzhang/templates/builtin/: diary-classic.json  diary-fancy-fonts.json  diary-font.json  diary-landscape.json  diary-lang-fonts.json  diary-pixel-fonts.json  diary-rich.json  hand-vintage.json
src/shouzhang/templates/builtin-backup/: hand-classic.json  hand-fresh.json  hand-landscape.json
web-old/: server.py
web-old/static/: app.js  index.html  style.css
